# IE416_Robot_Programming

catkin_ws_alexa_ros/alexa_ros/: CMakeLists.txt  package.xml
catkin_ws_alexa_ros/devel/include/alexa_ros/: AlexaTaskAction.h  AlexaTaskActionFeedback.h  AlexaTaskActionGoal.h  AlexaTaskActionResult.h  AlexaTaskFeedback.h  AlexaTaskGoal.h  AlexaTaskResult.h
catkin_ws_alexa_ros/devel/lib/pkgconfig/: alexa_ros.pc  kuka_kr5.pc  robot_arm.pc  robot_ie416.pc  robot_math.pc  robotic_arm.pc
catkin_ws_alexa_ros/devel/share/alexa_ros/cmake/: alexa_ros-msg-paths.cmake  alexa_rosConfig.cmake
catkin_ws_alexa_ros/devel/share/alexa_ros/msg/: AlexaTaskAction.msg  AlexaTaskActionFeedback.msg  AlexaTaskActionGoal.msg  AlexaTaskActionResult.msg  AlexaTaskFeedback.msg
catkin_ws_alexa_ros/src/alexa_ros/: CMakeLists.txt
catkin_ws_alexa_ros/src/alexa_ros/config/: manipulator_control.yaml
catkin_ws_alexa_ros/src/alexa_ros/launch/: alexa_interface.launch
catkin_ws_alexa_ros/src/alexa_ros/src/: alexa_ros_interface.py  alexa_task.py
catkin_ws_alexa_ros/src/kuka_kr5/: CMakeLists.txt  package.xml
catkin_ws_alexa_ros/src/robot_ie416/: CMakeLists.txt  package.xml
catkin_ws_alexa_ros/src/robot_ie416/config/: lab_6.rviz
catkin_ws_alexa_ros/src/robot_math/: CMakeLists.txt  package.xml
catkin_ws_alexa_ros/src/robot_math/src/: publisher.py  subcriber.py
catkin_ws_alexa_ros/src/robotic_arm/: CMakeLists.txt
catkin_ws_alexa_ros/src/robotic_arm/launch/: manipulator_control.launch
catkin_ws_alexa_ros/src/robotic_arm/urdf/: manipulator.urdf
(+45 files in other folders)
